--- a/aboutme/src/pages/home.css
+++ b/aboutme/src/pages/home.css
@@ -1,6 +1,30 @@
 body {
-    background-color: #032455;
+    background-color: #072b62;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg fill-opacity='0.97'%3E%3Ccircle fill='%23032455' cx='50' cy='0' r='50'/%3E%3Cg fill='%23032f66' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%23043b78' cx='50' cy='100' r='50'/%3E%3Cg fill='%23044889' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%2304569b' cx='50' cy='200' r='50'/%3E%3Cg fill='%230566ad' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%230577be' cx='50' cy='300' r='50'/%3E%3Cg fill='%230589d0' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%23059ce2' cx='50' cy='400' r='50'/%3E%3Cg fill='%2305b1f4' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%2310c1fb' cx='50' cy='500' r='50'/%3E%3Cg fill='%2321cefc' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%2332d9fc' cx='50' cy='600' r='50'/%3E%3Cg fill='%2343e3fd' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%2355ecfd' cx='50' cy='700' r='50'/%3E%3Cg fill='%2366f3fe' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%2378fafe' cx='50' cy='800' r='50'/%3E%3Cg fill='%2389fefe' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%239bfffb' cx='50' cy='900' r='50'/%3E%3Cg fill='%23acfff9' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%23BEFFF8' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: scroll;
     background-size: contain;
+    overflow:overlay;
+}
+
+body::-webkit-scrollbar {
+    margin-top: 1em;
+    margin-right: 1em;
+    width: 10px;
+    background-color: transparent;
+  }
+   
+   
+body::-webkit-scrollbar-thumb {
+    padding-right: 10px;
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border: solid 4px transparent;
+    border-radius: 14px;
+  }
+
+body::-webkit-scrollbar-track {
+    margin-top: 65px;
+    width:0;
+    border: solid 5px transparent;
+    background-color: transparent;
 }
